Aadido listado de provincias.

--- a/view/admin_argentina.html
+++ b/view/admin_argentina.html
@@ -4,7 +4,10 @@
    <div class="row">
       <div class="col-sm-12">
          <div class="page-header">
-            <h1>Argentina</h1>
+            <h1>
+               <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
+               Argentina
+            </h1>
             <p class="help-block">
                Este plugin está en desarrollo.
             </p>
