Corregida función para añadir impuestos.

--- a/view/admin_argentina.html
+++ b/view/admin_argentina.html
@@ -20,18 +20,21 @@
             <span class="badge">1</span> &nbsp;
             Establecer Pesos (ARG) como moneda por defecto
          </a>
+         <br/>
       </div>
       <div class="col-sm-6">
          <a href="{$fsc->url()}&opcion=pais" class="btn btn-block btn-default">
             <span class="badge">2</span> &nbsp;
             Establecer Argentina como pais por defecto
          </a>
+         <br/>
       </div>
-        <div class="col-sm-6">
-         <a href="{$fsc->url()}&opcion=pais" class="btn btn-block btn-default">
+      <div class="col-sm-6">
+         <a href="{$fsc->url()}&opcion=iva" class="btn btn-block btn-default">
             <span class="badge">3</span> &nbsp;
-            Establecer Impuestos para ARGENTINA
+            Añadir impuestos para Argentina
          </a>
+         <br/>
       </div>
    </div>
 </div>
